fix minor UI bug on mobile screen

--- a/styles/modules/_header.scss
+++ b/styles/modules/_header.scss
@@ -56,9 +56,8 @@
       float: right;
       text-transform: none;
       font-weight: normal;
-      .navbar-nav > li >a {
-        padding-top: 15px;
-        padding-bottom: 15px;
+      .navbar-nav > li > a {
+        padding: 15px 3px;
       }
     }
   }
@@ -66,6 +65,13 @@
     border: 1px solid $border;
     padding: 5px 10px;
     background-color: #F9F9F9;
+  }
+}
+
+@media only screen and (min-width: 480px) {
+  .date-indicator .main-navbar .navbar-nav > li > a {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 
